--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -138,7 +138,7 @@
     }
 
     .nameform {
-        position: absolute;
-        top: 350px;
+        // position: absolute;
+        // top: 350px;
     }
 }
