--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -7,25 +7,31 @@
     <br>
     <mat-form-field appearance="outline" style="max-width: 350px; min-width: 260px;">
         <mat-label>Rationale</mat-label>
-        <input matInput type="name" placeholder="name" formControlName="name">
+        <input matInput type="name" placeholder="name" formControlName="rationale">
     </mat-form-field>
     <br>
 
-    <div class="row">
+    <div class="row" style="text-align: center;">
 
-        <div fxFlex>
-            <button (click)="buttonOption('delete')" mat-mini-fab color="warn" aria-label="icon">
+        <div fxFlex fxLayoutAlign="center center">
+            <div fxFlex>
+            <button (click)="buttonOption('delete')" mat-mini-fab color="success" aria-label="icon">
                 <mat-icon>delete</mat-icon>
             </button>
+            </div>
 
 
-            <button (click)="buttonOption('cancel')" mat-mini-fab color="primary" aria-label="icon">
+            <div fxFlex>
+            <button (click)="buttonOption('cancel')" mat-mini-fab color="success" aria-label="icon">
                 <mat-icon>cancel</mat-icon>
             </button>
+            </div>
 
+            <div fxFlex>
             <button (click)="buttonOption('save')" mat-mini-fab color="success" aria-label="icon">
                 <mat-icon>check_circle</mat-icon>
             </button>
+            </div>
         </div>
     </div>
 
