--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -73,6 +73,8 @@
 
             </div>
 
+
+
             <div *ngIf="isUserLogged">
 
                 <div style="max-width: 360px;" class="contenedor">
@@ -84,35 +86,34 @@
                         <div *ngFor="let item of  newNames" (click)="openDialog(item.name)">{{item.name}}</div>
                     </mat-card>
 
-                    <form name="newNameForm" [formGroup]="newNameForm" novalidate class="nameform">
+                    <form name="newNameForm" [formGroup]="newNameForm" novalidate class="nameform" style="text-align: center;">
 
-                        <mat-form-field appearance="outline" style="min-width: 350px;">
+                        <mat-form-field appearance="outline" style="min-width: 330px;">
                             <mat-label>Name Suggestions</mat-label>
                             <input matInput type="name" placeholder="name" formControlName="name">
                         </mat-form-field>
-                        <br>
 
-                  
-                      
 
+
+                        <div class="row" style="text-align: center;">
+                            <div class="col-sm">
+                            
                                 <button (click)="sendNewName()" mat-raised-button style="color: white;" color="primary"
                                     class="submit-button" aria-label="LOG IN">
                                     CLICK TO SUBMIT
                                 </button>
-                       
-                           
-                        <br>
 
-                        <mat-checkbox class="remember-me secondary" aria-label="Anonymous" matInput
-                            formControlName="suma">
-                            Enable Anonymous Submit?
-                        </mat-checkbox>
-
-                        <br><br>
-
-                        <div class="row">
+                                <br>
+                                <br>
+                            </div>
                             <div class="col-sm">
 
+                                <mat-checkbox class="remember-me secondary" aria-label="Anonymous" matInput
+                                    formControlName="suma">
+                                    Enable Anonymous Submit?
+                                </mat-checkbox>
+
+                                <br><br>
                             </div>
                             <div class="col-sm">
 
@@ -121,9 +122,7 @@
                                     CLICK TO FINISH
                                 </button>
                             </div>
-                            <div class="col-sm">
 
-                            </div>
                         </div>
 
                     </form>
