--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -7,7 +7,7 @@
 
         <div class="col-sm">
 
-            <mat-toolbar class="toolbar ">BI Project: {{projectname}}</mat-toolbar>
+            <mat-toolbar class="toolbar ">BI Project: {{projectname}}v.002</mat-toolbar>
             <div *ngIf="!isUserLogged" id="login" fxLayout="column">
 
                 <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
