--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -19,7 +19,7 @@
                             for Project </div>
                         <div class="title secondary-text" style="color: #004684;">
                             {{projectname}}
-                        </div> <br>
+                        </div> 
                         <div class="mat-small secondary-text">Please enter your information below to continue.
                         </div>
 
@@ -73,7 +73,7 @@
 
 
 
-            <div *ngIf="isUserLogged" fxLayout="column" fxLayoutAlign="center center">
+            <div *ngIf="isUserLogged" fxLayout="column" fxLayoutAlign="center center"  id="login">
 
                 <div style="max-width: 360px;" class="contenedor">
 
