--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -137,8 +137,10 @@
         }
     }
 
-    .nameform {
-        // position: absolute;
-        // top: 350px;
+    .refreshbutton {
+        color: #004684;
+        background-color: white;
+        font-size: 8px;
+        outline: none;
     }
 }
