--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -15,20 +15,20 @@
 
         <div fxFlex fxLayoutAlign="center center">
             <div fxFlex>
-            <button (click)="buttonOption('delete')" mat-mini-fab color="success" aria-label="icon">
+            <button (click)="buttonOption('delete')" class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
                 <mat-icon>delete</mat-icon>
             </button>
             </div>
 
 
             <div fxFlex>
-            <button (click)="buttonOption('cancel')" mat-mini-fab color="success" aria-label="icon">
+            <button (click)="buttonOption('cancel')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
                 <mat-icon>cancel</mat-icon>
             </button>
             </div>
 
             <div fxFlex>
-            <button (click)="buttonOption('save')" mat-mini-fab color="success" aria-label="icon">
+            <button (click)="buttonOption('save')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
                 <mat-icon>check_circle</mat-icon>
             </button>
             </div>
