fixed delete names

--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -1,11 +1,16 @@
 <form name="loginForm" [formGroup]="loginForm" novalidate class="nameform">
 
-    <mat-form-field appearance="outline" style="max-width: 350px; min-width: 260px;">
+
+    <div  *ngIf="!isDeleting" class="mat-h2" style="text-align: center;">Are you sure you want to delete? </div>
+    <div  *ngIf="!isDeleting" class="mat-h1" style="text-align: center;">{{editName}}</div>
+    <div  *ngIf="!isDeleting" class="mat-h4">If you delete this name, it will be removed permanently.</div>
+
+    <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
         <mat-label>Edit Name</mat-label>
         <input matInput type="name" placeholder="name" formControlName="name">
     </mat-form-field>
     <br>
-    <mat-form-field appearance="outline" style="max-width: 350px; min-width: 260px;">
+    <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
         <mat-label>Rationale</mat-label>
         <input matInput type="name" placeholder="name" formControlName="rationale">
     </mat-form-field>
@@ -15,21 +20,27 @@
 
         <div fxFlex fxLayoutAlign="center center">
             <div fxFlex>
-            <button (click)="buttonOption('delete')" class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
+            <button *ngIf="isDeleting" (click)="buttonOption('delete')" class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
                 <mat-icon>delete</mat-icon>
             </button>
             </div>
 
 
             <div fxFlex>
-            <button (click)="buttonOption('cancel')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
+            <button *ngIf="isDeleting" (click)="buttonOption('cancel')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
+                <mat-icon>cancel</mat-icon>
+            </button>
+            <button *ngIf="!isDeleting" (click)="buttonOption('cancel')"  class="refreshbutton" mat-mini-fab style="color: white;background-color: red;" color="success" aria-label="icon">
                 <mat-icon>cancel</mat-icon>
             </button>
             </div>
 
             <div fxFlex>
-            <button (click)="buttonOption('save')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
+            <button *ngIf="isDeleting" (click)="buttonOption('save')"  class="refreshbutton" mat-mini-fab style="font-size: 8px;" color="success" aria-label="icon">
                 <mat-icon>check_circle</mat-icon>
+            </button>
+            <button *ngIf="!isDeleting" (click)="buttonOption('delete')" class="refreshbutton" mat-mini-fab style="color: white;background-color: green;" color="success" aria-label="icon">
+                <mat-icon>delete</mat-icon>
             </button>
             </div>
         </div>
