--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ $custom-orange: (
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $firestarter-primary: mat-palette($custom-orange, 50);
-$firestarter-accent: mat-palette($mat-purple, A200, A100, A400);
+$firestarter-accent: mat-palette($mat-orange, A700, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $firestarter-warn: mat-palette($mat-red);
