fixed delete names

--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -2,7 +2,7 @@
 
 
     <div  *ngIf="!isDeleting" class="mat-h2" style="text-align: center;">Are you sure you want to delete? </div>
-    <div  *ngIf="!isDeleting" class="mat-h1" style="text-align: center;">{{editName}}</div>
+    <div  *ngIf="!isDeleting" class="mat-h1" style="text-align: center;color: #004684;">{{editName}}</div>
     <div  *ngIf="!isDeleting" class="mat-h4">If you delete this name, it will be removed permanently.</div>
 
     <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
