--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -4,10 +4,9 @@
         <mat-toolbar class="toolbar " fxLayoutAlign="space-between center">
             <!-- <mat-icon>insert_drive_file</mat-icon>  -->
             {{projectname}}
-            <button *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')" mat-mini-fab 
-            style="color: white;background-color: #004684;  outline: none;" >
-                <mat-icon>help</mat-icon>
-            </button>
+          
+                <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')" style="color: white;background-color: #004684;  outline: none;" >help</mat-icon>
+         
         </mat-toolbar>
 
         <div class="col container">
