--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -3,7 +3,7 @@
 
         <mat-toolbar class="toolbar " fxLayoutAlign="space-between center">
             <!-- <mat-icon>insert_drive_file</mat-icon>  -->
-            {{projectname}}
+            Project: {{projectname}}
           
                 <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')" style="color: white;background-color: #004684;  outline: none;" >help</mat-icon>
          
@@ -84,7 +84,7 @@
                 <div class="mat-subheading-1">Suggestions</div>
                 <mat-card style="height: 250px;overflow-y: scroll;min-width: 330px;">
 
-                    <div *ngFor="let item of  newNames" (click)="openDialog(item.name, item.nameid)" >{{item.name}}</div>
+                    <div *ngFor="let item of  newNames" style="font-size: 20px;" (click)="openDialog(item.name, item.nameid)" >{{item.name}}</div>
                 </mat-card>
                 <br>
 
