--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -88,7 +88,8 @@
     width: 322px;
     height: 638px;
     position: absolute;
-    right: -324px;
+    right: -337px;
+    top: -415px;
 }
 
 .post-list {
