--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -1,5 +1,30 @@
 <mat-sidenav-container class="example-container" *ngIf="true">
-  <mat-sidenav mode="over" [opened]="overview" style="    width: 300px;">Sidenav content</mat-sidenav >
+  <mat-sidenav hasBackdrop="false" mode="over" [opened]="overview" style="width: 300px;">
+  
+    
+      <mat-card class="example-card" *ngFor="let item of [1,2,3,4]">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button>LIKE</button>
+          <button mat-button>SHARE</button>
+        </mat-card-actions>
+      </mat-card>
+    
+  
+  </mat-sidenav >
+    
   <mat-sidenav-content >
     <div class="container">
       <div class="row">
@@ -8,7 +33,7 @@
         <div *ngIf="!createPostIt" class="col">
           <div class="presentation-box" [style]="slideBackground">
 
-            <mat-toolbar class="toolbar mat-elevation-z4">
+            <mat-toolbar class="toolbar mat-elevation-z4" *ngIf="mainMenu">
 
               <button  (click)="home()" mat-icon-button aria-label="Example icon-button with a heart icon">
                 <mat-icon>home</mat-icon>
@@ -20,11 +45,11 @@
 
               <input class="search" placeholder="search" type="text">
 
-              <button (click)="moveForward()" mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+              <button (click)="moveBackward()" mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
                 <mat-icon>chevron_left</mat-icon>
               </button>
 
-              <button  (click)="moveBackward()" mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
+              <button  (click)="moveForward()" mat-icon-button color="primary" aria-label="Example icon-button with a heart icon">
                 <mat-icon>chevron_right</mat-icon>
               </button>
 
@@ -50,7 +75,7 @@
               </button>
 
               <button (click)="help()" mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
-                <mat-icon>help</mat-icon>
+                <mat-icon  style="color: green !important;">help</mat-icon>
               </button>
 
             </mat-toolbar>
@@ -77,7 +102,7 @@
               
                 <div class="col post-it-container" cdkDropList  [cdkDropListData]="timePeriods" (cdkDropListDropped)="drop($event)">
                 <div class="row">
-                  <mat-card style="max-resolution: 5px;px;    width: 187px;" cdkDrag  cdkDragLockAxis="xy"
+                  <mat-card style="max-resolution: 5px;px;    width: 187px;margin: 10px;" cdkDrag  cdkDragLockAxis="xy"
                     *ngFor="let item of timePeriods; let i = index;">
                     <mat-card-header>
                       <mat-card-title>{{item}}</mat-card-title>
@@ -94,7 +119,7 @@
                       <button mat-button>
                         <mat-icon>favorite</mat-icon>
                       </button>
-                      <button mat-button>SHARE</button>
+                      <button mat-button>X</button>
                     </mat-card-actions>
                   </mat-card>
                 </div>
@@ -191,7 +216,7 @@
 
                 <mat-toolbar class="toolbar-postit mat-elevation-z4">
 
-                  <button mat-icon-button aria-label="Example icon-button with a heart icon"
+                  <button  (click)="home()"  mat-icon-button aria-label="Example icon-button with a heart icon"
                     matTooltip="Info about the action" matTooltipPosition="above">
                     <mat-icon>home</mat-icon>
                   </button>
@@ -202,11 +227,11 @@
 
                   <input class="search" placeholder="search" type="text">
 
-                  <button mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
+                  <button (click)="moveBackward()" mat-icon-button color="accent" aria-label="Example icon-button with a heart icon">
                     <mat-icon>chevron_left</mat-icon>
                   </button>
 
-                  <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
+                  <button (click)="moveForward()" mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
                     <mat-icon>chevron_right</mat-icon>
                   </button>
 
@@ -221,7 +246,7 @@
                   </button>
 
                   <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
-                    <mat-icon>help</mat-icon>
+                    <mat-icon  style="color: green !important;">help</mat-icon>
                   </button>
 
                 </mat-toolbar>
@@ -237,3 +262,5 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+
