--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -1,28 +1,9 @@
 <mat-sidenav-container class="example-container" *ngIf="true">
-  <mat-sidenav hasBackdrop="false" mode="over" [opened]="overview" style="width: 300px;">
-  
-    
-      <mat-card class="example-card" *ngFor="let item of [1,2,3,4]">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    
-  
+
+  <mat-sidenav mode="over" [opened]="overview" style="width: 350px;">  
+      <mat-card class="example-card" *ngFor="let item of appSlidesData">        
+        <img  [src]="'http://www.bipresents.com/' + item.SlideBGFileName" alt="overview" style="max-width: 300px;">    
+      </mat-card>    
   </mat-sidenav >
     
   <mat-sidenav-content >
@@ -85,7 +66,7 @@
           <div class="presentation-box">
 
 
-            <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary">
+            <mat-toolbar class="toptoolbar mat-elevation-z4" color="primary" >
               <div class="row">
                 <div class="col" style="color: white; font-size: 40px;font-family: Arial">
                   Brandstorm
@@ -168,8 +149,6 @@
                
                 </mat-grid-list> -->
 
-
-
                   <!-- <div>
                   <div cdkDropListOrientation="horizontal" fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutWrap
                     fxLayoutGap="10px" class="cards" cdkDropList (cdkDropListDropped)="drop($event)">
@@ -196,9 +175,6 @@
                 </div>
    -->
 
-
-
-
                   <!-- NAMES BOX -->
 
                   <div class="col" style="padding: 0px !important; margin: 0px !important;">
@@ -214,7 +190,7 @@
                   </div>
                 </div>
 
-                <mat-toolbar class="toolbar-postit mat-elevation-z4">
+                <mat-toolbar class="toolbar-postit mat-elevation-z4" *ngIf="mainMenu">
 
                   <button  (click)="home()"  mat-icon-button aria-label="Example icon-button with a heart icon"
                     matTooltip="Info about the action" matTooltipPosition="above">
