--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -147,9 +147,11 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
-  .example-card {
-    height: 300px;
-    width: 300px;
+  .example-card {  
+    width: 320px;
+    padding-left: 4px;
+    margin: 5px;
+    border: solid 1px grey;
 
   }
   
