--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -78,8 +78,9 @@
 }
 
 .post-it-container {
-    border: red solid;
+    // border: red solid;
     width: 620px;
+    margin-top: 10px;
     height: 638px;
 }
 
